--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,7 +15,7 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
-$purpleblue: #4D289F !default;
+$purpleblue: #5b0abd !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include Google font
@@ -25,18 +25,62 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "organisms/calendar";
 @import "blocks/forms";
 @import "blocks/timercard";
-@import "mixins/mixins";
 @import "../www/lib/ionic/fonts/avenir-next-regular.ttf";
 @font-face {
   font-family: 'Avenir Next';
   src: url('../www/lib/ionic/fonts/avenir-next-regular.ttf') format('ttf');
 }
 
-$font-family-maven: "Maven Pro", sans-serif;
-$font-family-main: "Lato", 'Poppins', 'Helvetica', sans-serif !default;
-$font-family-secondary: "Open Sans";
-$color-black: #181A1E;
-$color-paragraph: #7C8999;
+$font-family-maven: "Maven Pro",
+sans-serif;
+$font-family-base: "Crimson Text",
+sans-serif;
+$font-family-main: "Lato",
+'Poppins',
+'Helvetica',
+sans-serif !default;
+@mixin gradient__theme-main() {
+  background: linear-gradient(25deg, rgba(216, 7, 81, 0.58) 0%, #2b1dff 100%);
+}
+
+@mixin content__separator-line {
+  background: $purpleblue;
+  width: 50px;
+  height: 2px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@mixin social__icon {
+  color: white;
+  font-size: 33px;
+  padding: 30px;
+  background-image: linear-gradient(151deg, #beabff, #7058c1);
+  box-shadow: -7px 6px 15px rgba(190, 171, 255, 0.5), -1px 5px 9px rgba(112, 88, 193, 0.17);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  margin: 20px;
+  position: relative;
+  display: block;
+  &:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+@mixin card__bg-gradient {
+  background: linear-gradient(45deg, #fdfbfb, #ebedee);
+}
+
+* {
+  font-family: $font-family-main;
+}
 
 h1,
 h2,
@@ -45,7 +89,6 @@ h4,
 h5,
 h6 {
   font-family: $font-family-main !important;
-  color: $color-black !important;
 }
 
 h4 {
@@ -53,11 +96,9 @@ h4 {
 }
 
 p {
-  font-family: $font-family-secondary !important;
-  font-size: 13px !important;
+  font-family: $font-family-base;
+  font-size: 14px !important;
   font-weight: normal;
-  letter-spacing: 0.05em;
-  color: $color-paragraph;
 }
 
 .scroll {
@@ -149,9 +190,8 @@ p {
   }
 }
 
-.button {
-  border-radius: 0 !important;
-}
+
+
 
 .popup-container {
   .popup {
@@ -160,7 +200,10 @@ p {
     @include card__bg-gradient;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     margin: 20px;
+
     .button {
+
+        white-space: nowrap;
       background-color: $purpleblue;
       &:hover {
         background-color: darken($purpleblue, 2.5%);
@@ -170,6 +213,9 @@ p {
       }
     }
 
+    h3 {
+      color: #181A1E !important;
+    }
     .popup-head {
       border-bottom: 1px solid $purpleblue;
     }
@@ -184,7 +230,8 @@ p {
 
 .tournament-feed,
 .about,
-.calendar {
+.calendar,
+.contacts {
   .timer-card__header {
     h3 {
       color: white;
@@ -209,6 +256,8 @@ p {
     .list {
       padding-top: 10px;
       .feed-card {
+        margin-top: 0;
+        margin-right: 0;
         padding-top: 0;
         padding-bottom: 0;
         border: none;
@@ -219,13 +268,12 @@ p {
           background-color: rgba(0, 0, 0, 0.25) !important;
         }
         .item-content {
-          background: #fff;
+          @include card__bg-gradient;
           margin-bottom: 25px;
           overflow: hidden;
-          border-radius: 3px;
-          box-shadow: 0 2px 44px 0 rgba(46, 14, 152, 0.18);
-          animation: fadeIn 500ms ease-in-out;
-          .item-avatar {
+          border-radius: 2px;
+          box-shadow: 3px 2px 44px 0 rgba(46, 14, 152, 0.18);
+          .item-avatar-left {
             padding: 10px 0 10px 85px !important;
             .ion-icon {
               @include social__icon();
@@ -235,15 +283,22 @@ p {
               opacity: 1;
               position: absolute;
               margin: 0;
+
             }
             h2 {
               font-weight: 500;
               color: #181A1E;
-              margin-bottom: 10px;
             }
             p {
-              color: $color-paragraph;
+              color: #7C8999;
             }
+          }
+          .card__created {
+            font-size: 12px !important;
+            padding: 5px 0 !important;
+          }
+          .card__desc {
+            padding: 5px 0 !important;
           }
         }
       }
@@ -251,102 +306,21 @@ p {
   }
 }
 
-.about {
-  .feed-bg {
-    background: #fff;
-  }
-
-  .about-points {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    font-family: $font-family-secondary;
-    height: auto;
-    box-shadow: 0 2px 44px 0 rgba(46, 14, 152, 0.18);
-    background: white;
-    margin: 30px auto;
-    padding: 24px;
-
-    .contacts--icon {
-      box-shadow: -8px 3px 17px rgba(0, 0, 0, 0.08), -1px 5px 9px rgba(37, 35, 4, 0.08);
-    }
-    i {
-      margin: 40px;
-      &:after {
-        content: '14-20 August';
-        position: absolute;
-        width: 130px;
-        height: 50px;
-        font-size: 13px;
-        top: 70px;
-        right: -40px;
-        text-align: center;
-        color: $color-paragraph;
-      }
-    }
-
-    .ion-lightbulb {
-      background-image: linear-gradient(151deg, #ffe5ab, #d87e21);
-
-      &:after {
-        content: 'Estonian Debating Society';
-      }
-    }
-
-    .ion-briefcase {
-      background-image: linear-gradient(151deg, #e686b2, rgb(134, 3, 64));
-
-      &:after {
-        content: 'Tallinn University of Technology';
-      }
-    }
-
-    .ion-calendar {
-      background-image: linear-gradient(151deg, #abcdff, #226f9c);
-    }
-
-    .ion-person {
-      background-image: linear-gradient(151deg, #abffef, #43a99a);
-
-      &:after {
-        content: '220 Teams';
-      }
-    }
-    .ion-power:after {
-      content: 'Grand Final, 19th August';
-    }
-  }
-
-  .about--content-paragraph_container {
-    padding: 20px;
-    margin: 0 auto;
-    .pragraph {
-      margin: 60px auto;
-      color: #ccc !important;
-    }
-  }
-
-  @keyframes drawLine {
-    0% {
-      width: 0;
-    }
-    100% {
-      width: 137px;
-    }
-  }
-}
-
 .card-detail-view {
-
+  p {
+    color: #181A1E !important;
+    font-weight: 300;
+  }
   .card-detail-view-bg {
     position: absolute;
     width: 100vw;
     height: 100vh;
-    @include card__bg-gradient;
+    background-image: url('../img/eudc2017-bg-blur.jpg');
+    background-position: center;
+    background-size: cover;
   }
   .scroll-content {
-
+    background: linear-gradient(180deg, rgba(9, 0, 10, 0.87) 16%, rgba(64, 0, 220, 0.45) 156%) !important;
     > .scroll {
       max-width: 800px;
       margin: 0px auto;
@@ -379,14 +353,21 @@ p {
         padding-top: 0;
       }
     }
+    .item {
+      @include card__bg-gradient;
+    }
+  }
+  .card {
+    background-color: transparent !important;
   }
   .item-avatar {
+    background-image: url('../img/eudc2017-bg-blur.jpg') !important;
     background-size: cover !important;
     background-position: center !important;
     position: relative;
     &:after {
       content: '';
-      background: linear-gradient(0deg, rgba(0, 0, 0, 0.38) -10%, rgba(212, 187, 224, 0) 100%);
+      @include gradient__theme-main();
       position: absolute;
       top: 0;
       left: 0;
@@ -456,11 +437,11 @@ p {
       padding-left: 75px;
       background: none;
       font-family: $font-family-main;
-      color: $color-paragraph;
+      color: #7C8999;
       .menu-item__icon {
         position: absolute;
         font-size: 25px;
-        color: $color-paragraph;
+        color: #7C8999;
         left: 30px;
         top: 14px;
         &--map {
@@ -582,7 +563,10 @@ ion-toolbar {
   li {
     color: rgba(255, 255, 255, 1);
   }
-
+  p {
+    text-align: justify;
+    color: rgba(255, 255, 255, 1);
+  }
   h2 {
     margin: 14px 0 18px;
   }
@@ -604,25 +588,20 @@ ion-toolbar {
 
 /* Navigation Bar */
 
-ion-header-bar {
-  &.bar-stable {
-    .title {
-      color: #fff !important;
-      text-align: center !important;
-      letter-spacing: 0.10em;
-      font-size: 16px !important;
-    }
-    &.bar {
-      &.bar-header {
-        background: linear-gradient(90deg, #33333c, #3F404E);
-        font-family: $font-family-main;
-        box-shadow: 2px 4px 20px 0 rgba(27, 15, 66, 0.36);
-        position: relative;
-        text-align: center;
-        text-transform: uppercase;
-        letter-spacing: 0.07em;
-      }
-    }
+.bar-stable {
+  .title {
+    color: #fff !important;
+    text-align: center !important;
+    letter-spacing: 0.10em;
+  }
+  .bar-header {
+    background: linear-gradient(90deg, #33333c, #3F404E) !important;
+    font-family: $font-family-main;
+    box-shadow: 2px 4px 20px 0 rgba(27, 15, 66, 0.36);
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.07em;
   }
 }
 
@@ -631,6 +610,12 @@ ion-header-bar {
 .spinner-ios,
 .spinner-ios-small {
   stroke: rgba(255, 255, 255, 0.9) !important;
+}
+
+.scroll-refresher .ionic-refresher-content,
+.contacts p {
+  color: rgba(255, 255, 255, 0.9) !important;
+  font-weight: 300;
 }
 
 .padding-div {
@@ -644,23 +629,16 @@ ion-header-bar {
   text-decoration: none;
 }
 
-.contacts .item.item-input {
-  border: 1px solid #E1E1E1;
-  min-width: 300px;
-  height: 110px;
+.contacts label.item.item-input {
+  background: transparent;
+  border-color: $purpleblue;
+  border-width: 0px 0px 1.5px 0px !important;
+  max-width: 300px;
+  height: 150px;
   margin: 0 auto;
-  border-radius: 3px;
-  background: #F9F9F9;
-  color: $color-paragraph;
-  font-family: $font-family-secondary;
-  font-size: 14px;
-  padding: 8px;
-  transition: all 250ms ease-in-out;
-
-  &:focus {
-    border: 1px solid $purpleblue;
-    box-shadow: 2px 2px 4px 0 rgba(46, 14, 152, 0.20);
-    background: #fff;
+  textarea {
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
   }
 }
 
@@ -670,55 +648,19 @@ ion-header-bar {
 }
 
 .contacts {
-
-  h3.title {
-    color: $color-black !important;
-    margin-top: 10px;
-  }
-
   img {
     border-radius: 50%;
     object-fit: cover;
-    width: 75px;
-    height: 75px;
+    width: 100px;
+    height: 100px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   }
-
-  p {
-    max-width: 300px;
-    margin: 0 auto;
-  }
-
-  &__person {
-    max-width: 300px;
-    height: auto;
-    box-shadow: 0 2px 44px 0 rgba(46, 14, 152, 0.18);
-    background: white;
-    margin: 30px auto;
-    padding: 24px;
-
-    &:first-of-type {
-      margin-top: 0;
-    }
-
-    &:last-of-type {
-      margin-bottom: 0;
-    }
-
-    &-name {
-      margin-bottom: 0;
-    }
-
-    &-title {
-      padding-bottom: 8px;
-    }
-  }
-
 }
 
 .contacts-social--container {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 .contacts-mail-phone--container {
@@ -728,17 +670,30 @@ ion-header-bar {
 
 .contacts--icon {
   @include social__icon;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
-button.custom-button.button.button-full {
+h3,
+h4 {
+  color: #fff !important;
+}
+
+.content__separator-line {
+  @include content__separator-line;
+}
+
+.content__separator-line-xs {
+  @include content__separator-line;
+  width: 25px;
+  height: 1.5px;
+}
+
+.custom-button {
   background-color: $purpleblue !important;
   color: #fff !important;
   text-transform: uppercase;
-  min-width: 260px;
-  height: 48px;
-  border-radius: 3px !important;
-  font-family: $font-family-secondary;
   letter-spacing: 4px;
+  opacity: 1;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
@@ -746,159 +701,72 @@ textarea {
   resize: none;
 }
 
+.about-points {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  i {
+    margin: 40px;
+    &:after {
+      content: '14-20 August';
+      position: absolute;
+      width: 130px;
+      height: 50px;
+      font-size: 14px;
+      top: 70px;
+      right: -40px;
+      text-align: center;
+    }
+  }
+  .ion-lightbulb:after {
+    content: 'Estonian Debating Society';
+  }
+  .ion-briefcase:after {
+    content: 'Tallinn University of Technology';
+  }
+  .ion-person:after {
+    content: '220 Teams';
+  }
+  .ion-power:after {
+    content: 'Grand Final, 19th August';
+  }
+}
+
+.about--content-paragraph_container {
+  padding: 20px;
+  margin: 60px auto;
+  .pragraph {
+    margin: 60px auto;
+    color: #ccc !important;
+  }
+}
+
 .pinner {
   font-size: 16px !important;
 }
 
+.profile-icon-email {
+    font-size: 36px;
+    padding-right: 23px;
+}
+
+.profile-icon-role {
+    font-size: 36px;
+    padding-right: 12px;
+}
+
+.profile-icon-logout {
+    font-size: 36px;
+    padding-right: 15px;
+}
+
+.profile-title {
+    float: left;
+}
+
+
+
+
 // Include all of Ionic
 @import "../www/lib/ionic/scss/ionic";
-
-@keyframes fadeIn {
-  0% {
-    margin-top: -25px;
-    opacity: 0;
-    transform: perspective(40em) rotateX(-30deg) translateY(-20px);
-  }
-  100% {
-    opacity: 1;
-    margin-top: 0;
-    transform: translateY(0);
-  }
-}
-
-@keyframes fadeInX {
-  0% {
-    opacity: 0;
-    transform: perspective(40em) rotateX(-30deg) translateX(-50px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.card__main {
-  .card {
-    background: #fff;
-    margin-bottom: 25px;
-    overflow: hidden;
-    border-radius: 3px;
-    box-shadow: 0 2px 44px 0 rgba(46, 14, 152, 0.18);
-    animation: fadeInX 500ms ease-in-out;
-    .item-avatar {
-      padding: 10px 0 10px 85px !important;
-      .ion-icon {
-        @include social__icon();
-        font-size: 36px;
-        left: 14px;
-        top: 29px;
-        opacity: 1;
-        position: absolute;
-        margin: 0;
-      }
-    }
-
-    h2 {
-      font-weight: 500;
-      color: #181A1E;
-      margin-top: 0;
-      margin-bottom: 10px;
-    }
-
-    .item {
-      background: #fff;
-    }
-
-    .item-avatar {
-      min-height: 250px;
-    }
-
-    .item-body {
-      p {
-        color: $color-paragraph;
-        font-weight: normal;
-      }
-    }
-  }
-
-  .card__created {
-    font-size: 12px !important;
-  }
-
-  .card__desc,
-  .card__created {
-    margin: 0 !important;
-    padding: 5px 0 !important;
-  }
-}
-
-.button.ion-navicon {
-
-  &:before {
-    display: none;
-    content: '';
-  }
-
-  .burger__line {
-    width: 21px;
-    height: 2px;
-    background: #fff;
-    margin-top: 6px;
-
-    &:first-of-type {
-      margin-top: 0;
-    }
-
-    &:nth-of-type(2) {
-      width: 15px;
-    }
-  }
-}
-
-.back-text {
-  display: none !important;
-}
-
-.calendar {
-  .grid-header {
-    background: #fff;
-    box-shadow: 0 2px 24px 0 rgba(5, 0, 23, 0.28);
-  }
-
-  .grid-times .grid-time-label {
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid #eee;
-
-    > p {
-      font-family: $font-family-main !important;
-    }
-  }
-
-  .grid-session-cell {
-    font-family: $font-family-main;
-    border: 1px solid;
-    border-radius: 4px;
-
-    .grid-session-time {
-      padding-top: 0;
-    }
-
-    .grid-session-title {
-      padding-bottom: 0;
-      font-size: 14px;
-    }
-  }
-
-  .grid-times-holder {
-    border-right: 1px solid #eee;
-  }
-
-  .grid-header-label {
-    color: $color-black;
-    font-weight: normal;
-    font-family: $font-family-main;
-  }
-}
