--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -1,11 +1,11 @@
-﻿<ion-view view-title="Tournament Feed" class="tournament-feed card__main">
+﻿﻿<ion-view view-title="Tournament Feed" class="tournament-feed">
   <div class="feed-bg"></div>
     <ion-content>
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
 
         <ion-list show-delete="shouldShowDelete" can-swipe="listCanSwipe" class="item-text-wrap">
             <ion-item ng-repeat="timercard in timercards" class="accent--button item feed-card timer-card" ng-class="time" on-swipe-left="onLeftSwipe()" on-swipe-right="onRightSwipe()">
-                    <div class="item-avatar">
+                    <div class="item-avatar-left">
                         <i class="ion-icon ion-ios-timer-outline"></i>
                         <h2>{{timercard.title}}</h2>
                         <p>
@@ -14,7 +14,9 @@
                           Your round will start at <a ng-href="#/app/roundLocation/{{timercard.locationId}}">{{timercard.fullLocation}}</a> in:                          
                           <timer end-time="endDate"><br>{{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.</timer>
                         </p>
-                        <p>{{ timercard.created | date:'dd MMMM, HH:mm' }}</p>
+                        <div>
+                          <p>{{ timercard.created | date:'dd MMMM, HH:mm' }}</p>
+                        </div>
                         <ion-option-button class="button-assertive" ng-click="destroyCard($index)">
                           DELETE
                         </ion-option-button>
@@ -25,14 +27,16 @@
         <ion-list show-delete="shouldShowDelete" can-swipe="listCanSwipe" class="item-text-wrap">
             <ion-item ng-repeat="card in cards | orderBy: ['-pinned', '-created']" class="item feed-card" on-swipe-left="onLeftSwipe()" on-swipe-right="onRightSwipe()">
                 <a ng-click="goToCardDetail(card)" href="">
-                    <div class="item-avatar">
-                        <i class="ion-icon ion-ios-paper-outline"></i>
+                    <div class="item-avatar-left">
+                        <i class="ion-icon ion-ios-paper"></i>
                         <h2>
                             <i class="ion-pin pinner" ng-show="{{card.pinned}}"></i>
                             {{card.title}}
                         </h2>
                         <p class="card__desc">{{card.description | limitTo:90}}...</p>
-                        <p class="card__created">{{ card.created | date:'dd MMMM, HH:mm' }}</p>
+                        <div>
+                            <p class="card__created">{{ card.created | date:'dd MMMM, HH:mm' }}</p>
+                        </div>
                         <ion-option-button class="button-assertive" ng-click="destroyCard(card)">
                             Delete
                         </ion-option-button>
