--- a/scss/mixins/_mixins.scss
+++ b/scss/mixins/_mixins.scss
@@ -7,7 +7,7 @@
   font-size: 33px;
   padding: 30px;
   background-image: linear-gradient(151deg, #beabff, #7058c1);
-  box-shadow: -7px 6px 15px rgba(190, 171, 255, 0.5), -1px 5px 9px rgba(112, 88, 193, 0.17);
+  box-shadow: 0 13px 35px 0 rgba(0,0,0,0.10);
   width: 44px;
   height: 44px;
   border-radius: 50%;
