--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -2,42 +2,47 @@
     <div class="feed-bg"></div>
     <ion-content>
         <div class="padding-div">
-            <h3 class="title text-center">Get in touch with us!</h3>
-            <div class="content--separator-line"></div>
-        </div>
-        <div class="padding-div">
-            <p class="text-center">If you have any questions or feedback, please feel free to contact our organising
-                committee. Like us on <a
-                        href="https://www.facebook.com/Tallinn-EUDC-2017-355451294579393/">Facebook</a>
-                    and get our latest news and updates in your feed!
-            </p>
-            <div class="contacts-mail-phone--container">
-                <a href="mailto:info.tallinneudc@debate.ee"><i class="contacts--icon ion-ios-email-outline"></i></a>
-                <a href="tel:+37259051786"><i class="contacts--icon ion-ios-telephone-outline"></i></a>
+            <div class="card__main">
+                <div class="card">
+                    <h3 class="title text-center">Get in touch with us!</h3>
+                    <div class="padding-div">
+                        <p class="text-center">If you have any questions or feedback, please feel free to contact our
+                            organising
+                            committee. Like us on <a
+                                    href="https://www.facebook.com/Tallinn-EUDC-2017-355451294579393/">Facebook</a>
+                            and get our latest news and updates in your feed!
+                        </p>
+                        <div class="contacts-mail-phone--container">
+                            <a href="mailto:info.tallinneudc@debate.ee"><i
+                                    class="contacts--icon ion-ios-email-outline"></i></a>
+                            <a href="tel:+37259051786"><i class="contacts--icon ion-ios-telephone-outline"></i></a>
+                        </div>
+                    </div>
+                    <div class="padding-div text-center">
+                        <h4>Registration information</h4>
+                        <p>
+                            <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
+                        </p>
+                    </div>
+
+
+                    <div class="padding-div text-center">
+                        <h4>Equity team</h4>
+                        <p>
+                            <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
+                        </p>
+                    </div>
+
+                    <div class="padding-div text-center">
+                        <h4>Language team</h4>
+                        <p>
+                            <a href="mailto:TallinnLanguage@gmail.com">TallinnLanguage@gmail.com</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="padding-div text-center">
-            <h4>Registration information</h4>
-            <p>
-                <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
-            </p>
-        </div>
-
-
-        <div class="padding-div text-center">
-            <h4>Equity team</h4>
-            <p>
-                <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
-            </p>
-        </div>
-
-        <div class="padding-div text-center">
-            <h4>Language team</h4>
-            <p>
-                <a href="mailto:TallinnLanguage@gmail.com">TallinnLanguage@gmail.com</a>
-            </p>
-        </div>
 
         <div class="padding-div text-center">
             <h3 class="title">Organizers</h3>
@@ -106,7 +111,8 @@
             <div class="content--separator-line"></div>
         </div>
         <div class="padding-div">
-            <textarea rows="6" class="item item-input" placeholder="Ask something..." ng-model="feedback.content"></textarea>
+            <textarea rows="6" class="item item-input" placeholder="Ask something..."
+                      ng-model="feedback.content"></textarea>
         </div>
         <button ng-click="sendFeedback()" ng-disabled="!feedback.content"
                 class="custom-button button button-full btn-full-half">Send
@@ -115,7 +121,8 @@
             <a href="http://tallinneudc.com/"><i class="contacts--icon ion-earth"></i></a>
             <a href="facebook://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><i
                     class="contacts--icon ion-social-facebook"></i></a>
-            <a href="instagram://user?username=tallinneudc2017"><i class="contacts--icon ion-social-instagram-outline"></i></a>
+            <a href="instagram://user?username=tallinneudc2017"><i
+                    class="contacts--icon ion-social-instagram-outline"></i></a>
         </div>
 
         <div class="padding-div text-center">
