* Lots of changes

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -7,37 +7,84 @@
                 <div class="padding-div text-center">
                     <h3 class="pb-2">About EUDC</h3>
                     <div class="about-points">
-                        <i class="contacts--icon ion-calendar"></i>
-                        <i class="contacts--icon ion-lightbulb"></i>
-                        <i class="contacts--icon ion-briefcase"></i>
-                        <i class="contacts--icon ion-person"></i>
-                        <i class="contacts--icon ion-power"></i>
+                        <div class="about-points__box">
+                            <i class="contacts--icon ion-calendar"></i>
+                            <p class="about-points__box-content">Tallinn EUDC will take place during the 17th-20th of
+                                August and will be held in TUT.</p>
+                        </div>
+                        <div class="about-points__box">
+                            <i class="contacts--icon ion-lightbulb"></i>
+                            <p class="about-points__box-content">Estonian Debating Society is the advocate of debating
+                                in Estonia.</p>
+                        </div>
+                        <div class="about-points__box">
+                            <i class="contacts--icon ion-briefcase"></i>
+                            <p class="about-points__box-content">Tallinn University of Technology is the home of Tallinn
+                                EUDC
+                                2017.</p>
+                        </div>
+                        <div class="about-points__box">
+                            <i class="contacts--icon ion-person"></i>
+                            <p class="about-points__box-content">220 teams will be participating in this year's
+                                EUDC.</p>
+                        </div>
+                        <div class="about-points__box">
+                            <i class="contacts--icon ion-power"></i>
+                            <p class="about-points__box-content">The Grand Final will take place on the 20th of
+                                August in Nordea Kontserdimaja.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="about--content-paragraph_container text-center">
-                    <h2>Opening Words</h2>
-                    <p class="pragraph">It is our great pleasure to welcome you to the European Universities Debating
-                        Championship 2017! Tallinn EUDC will take place from 14 – 20 August 2017 in Tallinn University
-                        of Technology (TTU) which is the only campus-type university in the Baltic countries and one of
-                        the most compact university campuses in Europe. The tournament will gather 800 young people from
-                        all over Europe. The tournament is organised by Tallinn University of Technology Debating
-                        Society and as a technical university, it shall emphasise the role that information technology
-                        plays in our lives in a setting of traditional Estonian culture.
-                    <p class="pragraph">
-                        We have been hard at work organising this tournament so that you could enter the world of EUDC
-                        and experience the magic yourself. We could not be happier to welcome you to the European
-                        University Debating Championship 2017!
-                    </p>
-                    <img class="fit-img" src="./img/Zeit_Debatte_Wien_-_Finale-02.jpg" alt="dabate image"/>
-                    <h3 class="text-center">The European University Debating Championships</h3>
-                    <div class="content__separator-line-xs"></div>
-                    <p class="pragraph">
-                        The European Universities Debating Championship (EUDC) is an annual tournament in which
-                        debating societies from Universities across Europe compete. The first championship took
-                        place in Rotterdam in 1999, when EUDC was a 32 team tournament with only a handful
-                        universities participating. Since then the competition has grown steadily and Tallinn EUDC
-                        is expected to host a total of 230 teams from all over the continent.
-                    </p>
+                    <div class="padding-div">
+                        <div class="paragraph__card">
+                            <div class="paragraph__card-content">
+                                <h2>Opening Words</h2>
+                                <p class="pragraph">It is our great pleasure to welcome you to the European Universities
+                                    Debating
+                                    Championship 2017! Tallinn EUDC will take place from 14 – 20 August 2017 in Tallinn
+                                    University
+                                    of Technology (TTU) which is the only campus-type university in the Baltic countries
+                                    and
+                                    one of
+                                    the most compact university campuses in Europe. The tournament will gather 800 young
+                                    people from
+                                    all over Europe. The tournament is organised by Tallinn University of Technology
+                                    Debating
+                                    Society and as a technical university, it shall emphasise the role that information
+                                    technology
+                                    plays in our lives in a setting of traditional Estonian culture.
+                                <p class="pragraph">
+                                    We have been hard at work organising this tournament so that you could enter the
+                                    world
+                                    of EUDC
+                                    and experience the magic yourself. We could not be happier to welcome you to the
+                                    European
+                                    University Debating Championship 2017!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="padding-div">
+                        <div class="paragraph__card">
+                            <div class="paragraph__card-img"></div>
+                            <div class="paragraph__card-content">
+                                <h3 class="text-center">The European University Debating Championships</h3>
+                                <div class="content__separator-line-xs"></div>
+                                <p class="pragraph">
+                                    The European Universities Debating Championship (EUDC) is an annual tournament in
+                                    which
+                                    debating societies from Universities across Europe compete. The first championship
+                                    took
+                                    place in Rotterdam in 1999, when EUDC was a 32 team tournament with only a handful
+                                    universities participating. Since then the competition has grown steadily and
+                                    Tallinn
+                                    EUDC
+                                    is expected to host a total of 230 teams from all over the continent.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                     <h3 class="text-center">University Debating</h4>
                         <div class="content__separator-line-xs"></div>
                         <p class="pragraph">In competitive university debating students train their argumentative
