--- a/scss/_global-variables.scss
+++ b/scss/_global-variables.scss
@@ -1,5 +1,5 @@
-$color-navy: #003366;
-$color-cyan: #44D3BD;
-$color-red: #F54F4F;
-$color-orange: #FFBD4A;
-$color-blue: #2F9ED2;
+$color-navy: linear-gradient( 135deg, #97ABFF 10%, #123597 100%);
+$color-cyan: linear-gradient( 135deg, #90F7EC 10%, #32CCBC 100%);
+$color-red: linear-gradient( 135deg, #FEB692 10%, #EA5455 100%);
+$color-orange: linear-gradient( 135deg, #FEC163 10%, #DE4313 100%);
+$color-blue: linear-gradient( 135deg, #ABDCFF 10%, #0396FF 100%);
