--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -20,23 +20,18 @@ $purpleblue: #4D289F !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include Google font
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,700,300);
-@import url(https://fonts.googleapis.com/css?family=Maven+Pro:400,700,500);
 @import "atoms/icons";
 @import "organisms/calendar";
 @import "blocks/forms";
 @import "blocks/timercard";
 @import "_global-variables.scss";
 @import "mixins/mixins";
-@import "../www/lib/ionic/fonts/avenir-next-regular.ttf";
 @import "utils/bootstrap4-helpers";
-@font-face {
-  font-family: 'Avenir Next';
-  src: url('../www/lib/ionic/fonts/avenir-next-regular.ttf') format('ttf');
-}
+@import "fonts";
 
 $font-family-maven: "Maven Pro", sans-serif;
-$font-family-main: "Lato", 'Poppins', 'Helvetica', sans-serif !default;
-$font-family-secondary: "Open Sans";
+$font-family-main: "Avenir Next", 'Lato', 'Helvetica', sans-serif !default;
+$font-family-secondary: "Lato";
 $color-black: #181A1E;
 $color-paragraph: #7C8999;
 
@@ -223,6 +218,7 @@ p {
         .item-content {
           background: #fff;
           margin-bottom: 25px;
+          position: relative;
           overflow: hidden;
           border-radius: 3px;
           box-shadow: 0 2px 44px 0 rgba(46, 14, 152, 0.18);
@@ -241,7 +237,6 @@ p {
             h2 {
               font-weight: 500;
               color: #181A1E;
-              margin-bottom: 10px;
             }
             p {
               color: $color-paragraph;
@@ -254,6 +249,13 @@ p {
 }
 
 .about {
+
+  .separator {
+    background-image: linear-gradient(135deg, #CE9FFC 10%, #7367F0 100%);
+    height: 2px;
+    width: 80px;
+    margin: 0 auto;
+  }
   .feed-bg {
     background: #fff;
   }
@@ -265,75 +267,92 @@ p {
     align-items: center;
     font-family: $font-family-secondary;
     height: auto;
-    box-shadow: 0 2px 44px 0 rgba(46, 14, 152, 0.18);
-    background: white;
-    margin: 0 auto;
-    padding: 24px;
-    animation: fadeIn 500ms ease-in-out;
 
-    .contacts--icon {
-      box-shadow: none;
-    }
-    i {
-      margin: 40px;
-      &:after {
-        content: '14-20 August';
-        position: absolute;
-        width: 130px;
-        height: 50px;
-        font-size: 13px;
-        top: 70px;
-        right: -34px;
-        text-align: center;
-        color: $color-paragraph;
+    &__box {
+      box-shadow: 0 0 51px 0 rgba(0, 0, 0, 0.08), 0 6px 18px 0 rgba(0, 0, 0, 0.05);
+      border-radius: 12px;
+      background: white;
+      min-width: 170px;
+      height: 180px;
+      margin: 16px;
+      position: relative;
+      animation: fadeIn 500ms ease-in-out;
+
+      &-content {
+        max-width: 220px;
+        margin: 0 auto;
+        padding: 16px;
+        font-size: 12px;
       }
-      &:before {
-        font-size: 25px;
+
+      .icon-arrow-right {
+        background-image: url('../img/icon-arrow-right.svg');
+        background-size: contain;
+        background-position: center center;
       }
-    }
 
-    .ion-power {
-      background: $color-navy;
-    }
-
-    .ion-lightbulb {
-      background: $color-orange;
-
-      &:after {
-        content: 'EDS';
+      .contacts--icon {
+        box-shadow: none;
+        border-radius: 12px 12px 0 0;
+        margin: 0 auto;
+        width: 100%;
+        &:before {
+          font-size: 25px;
+        }
       }
-    }
 
-    .ion-briefcase {
-      background: $color-red;
-
-      &:after {
-        content: 'TUT';
+      .ion-power {
+        background-image: $color-navy;
       }
-    }
 
-    .ion-calendar {
-      background: $color-blue;
-    }
+      .ion-lightbulb {
+        background-image: $color-orange;
+      }
 
-    .ion-person {
-      background: $color-cyan;
+      .ion-briefcase {
+        background-image: $color-red;
+      }
 
-      &:after {
-        content: '220 teams';
+      .ion-calendar {
+        background-image: $color-blue;
+      }
+
+      .ion-person {
+        background-image: $color-cyan;
       }
     }
-    .ion-power:after {
-      content: 'Grand Final';
-    }
+
   }
 
   .about--content-paragraph_container {
     padding: 20px;
     margin: 0 auto;
+
+    .paragraph__card {
+      max-width: 320px;
+      margin: 0 auto;
+      height: auto;
+      background: #fff;
+      margin-bottom: 25px;
+      overflow: hidden;
+      border-radius: 3px;
+      box-shadow: 0 2px 44px 0 rgba(46, 14, 152, 0.18);
+
+      &-content {
+        padding: 24px;
+      }
+
+      &-img {
+        background-image: url('../img/Zeit_Debatte_Wien_-_Finale-02.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 250px;
+        margin: 0 auto;
+      }
+    }
     .pragraph {
-      margin: 60px auto;
-      color: #ccc !important;
+      margin: 32px auto;
     }
   }
 
@@ -636,66 +655,65 @@ ion-header-bar {
   }
 }
 
-.gradient-icon{
-  display:inline-block;
-  width:100px;
-  height:100px;
-  margin:25px 25px;
-  position:relative;
-  overflow:hidden;
+.gradient-icon {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  margin: 25px 25px;
+  position: relative;
+  overflow: hidden;
 }
 
-section{
-  width:100%;
-  height:100%;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+section {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.icons{
-  display:block;
-  align-self:center;
-  background-color:#fff;
-  padding:50px 60px;
-  box-shadow: 0px 0px 10px rgba(20,20,20,.1);
-  border-radius:20px;
-  position:relative;
-  overflow:hidden;
+.icons {
+  display: block;
+  align-self: center;
+  background-color: #fff;
+  padding: 50px 60px;
+  box-shadow: 0px 0px 10px rgba(20, 20, 20, .1);
+  border-radius: 20px;
+  position: relative;
+  overflow: hidden;
 }
 
-svg .cls-1{
-  fill:none;
-  stroke-width:1px;
+svg .cls-1 {
+  fill: none;
+  stroke-width: 1px;
   stroke: #000;
-  mix-blend-mode:multiply;
+  mix-blend-mode: multiply;
 }
 
-svg{
-  color:#000;
-  position:relative;
-  opacity:.9;
-  width:100%;
-  height:100%;
-  display:block;
-  transition:transform .3s ease;
+svg {
+  color: #000;
+  position: relative;
+  opacity: .9;
+  width: 100%;
+  height: 100%;
+  display: block;
+  transition: transform .3s ease;
 }
-.icons-after{
+
+.icons-after {
   position: absolute;
-  width:150%;
-  height:150%;
-  top:-25%;
-  left:-25%;
+  width: 150%;
+  height: 150%;
+  top: -25%;
+  left: -25%;
   mix-blend-mode: screen;
-  pointer-events:none;
+  pointer-events: none;
   animation: spin 1.5s linear infinite alternate;
 }
 
-.gradient-one .icons-after, .gradients .one{
-  background: linear-gradient(55deg, #cb60b3 0%,#9c18dd 44%,#48a7e2 100%);
+.gradient-one .icons-after, .gradients .one {
+  background: linear-gradient(55deg, #cb60b3 0%, #9c18dd 44%, #48a7e2 100%);
 }
-
-
 
 /* Pull Down To Refresh */
 
@@ -760,6 +778,7 @@ svg{
   }
 
   .card__main .card {
+    position: relative;
     animation: fadeIn 500ms ease-in-out;
     padding: 16px;
   }
@@ -771,6 +790,7 @@ svg{
     background: white;
     margin: 30px auto;
     padding: 24px;
+    border-radius: 3px;
 
     &:first-of-type {
       margin-top: 0;
@@ -802,11 +822,11 @@ svg{
   justify-content: center;
 
   .ion-ios-telephone-outline {
-    background-image: linear-gradient(151deg, #abffd0, #48dc91);
+    background-image: linear-gradient(135deg, #81FBB8 10%, #28C76F 100%);
   }
 
   .ion-ios-email-outline {
-    background-image: linear-gradient(151deg, #b4ddf5, #34bbe4);
+    background-image: linear-gradient(135deg, #ABDCFF 10%, #0396FF 100%);
   }
 }
 
@@ -815,7 +835,7 @@ svg{
 }
 
 button.custom-button.button.button-full {
-  background-color: $purpleblue !important;
+  background-image: linear-gradient(135deg, #CE9FFC 10%, #7367F0 100%);
   color: #fff !important;
   text-transform: uppercase;
   min-width: 260px;
@@ -823,7 +843,8 @@ button.custom-button.button.button-full {
   border-radius: 3px !important;
   font-family: $font-family-secondary;
   letter-spacing: 4px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 0 51px 0 rgba(0, 0, 0, 0.08), 0 6px 18px 0 rgba(0, 0, 0, 0.05);
+  transition: all 500ms ease-in-out;
 }
 
 textarea {
@@ -839,13 +860,13 @@ textarea {
 
 @keyframes fadeIn {
   0% {
-    margin-top: -25px;
+    top: -50px;
     opacity: 0;
     transform: perspective(40em) rotateX(-30deg) translateY(-20px);
   }
   100% {
     opacity: 1;
-    margin-top: 0;
+    top: 0;
     transform: translateY(0);
   }
 }
