--- a/scss/mixins/_mixins.scss
+++ b/scss/mixins/_mixins.scss
@@ -6,7 +6,7 @@
   color: white;
   font-size: 33px;
   padding: 30px;
-  background-image: linear-gradient(151deg, #beabff, #7058c1);
+  background-image: linear-gradient( 135deg, #CE9FFC 10%, #7367F0 100%);
   box-shadow: 0 13px 35px 0 rgba(0,0,0,0.10);
   width: 44px;
   height: 44px;
