--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -125,7 +125,7 @@
                     class="contacts--icon ion-social-instagram-outline"></i></a>
         </div>
 
-        <div class="padding-div text-center">
+        <div class="padding-div text-center mb-3">
             <p>Tallinn University of Technology Debate Club</p>
             <p>
                 Ehitajate tee 5, 19086 Tallinn
