--- a/scss/_global-variables.scss
+++ b/scss/_global-variables.scss
@@ -1,4 +1,4 @@
-$color-navy: linear-gradient( 135deg, #97ABFF 10%, #123597 100%);
+$color-purple: linear-gradient( 135deg, #CE9FFC 10%, #7367F0 100%);
 $color-cyan: linear-gradient( 135deg, #90F7EC 10%, #32CCBC 100%);
 $color-red: linear-gradient( 135deg, #FEB692 10%, #EA5455 100%);
 $color-orange: linear-gradient( 135deg, #FEC163 10%, #DE4313 100%);
