--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -296,7 +296,7 @@ p {
       }
 
       .ion-power {
-        background-image: $color-navy;
+        background-image: $color-purple;
       }
 
       .ion-lightbulb {
