--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -5,7 +5,7 @@
         <div class="content">
             <div class="padding">
                 <div class="padding-div text-center">
-                    <h3 class="pb-2">About EUDC</h3>
+                    <!-- <h3 class="pb-2">About EUDC</h3> -->
                     <div class="about-points">
                         <div class="about-points__box">
                             <i class="contacts--icon ion-calendar"></i>
