* fix header ios

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -16,7 +16,7 @@
     </ion-side-menu-content>
 
     <ion-side-menu side="left" class="side-menu">
-        <ion-header-bar class="bar-stable">
+        <ion-header-bar class="bar-stable" style="height: 180px;">
             <img src="./img/eudc2017-logo.png" alt="EUDC2017 logo"/>
         </ion-header-bar>
         <ion-content>
