--- a/www/templates/event.html
+++ b/www/templates/event.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Event detail view" class="event-detail-view card__main">
+<ion-view view-title="{{ event.eventname }}" class="event-detail-view card__main">
     <div class="event-detail-view-bg"></div>
     <ion-content>
         <div class="list card">
