removed redundant text from about page

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -85,45 +85,9 @@
                             </div>
                         </div>
                     </div>
-                    <h3 class="text-center">University Debating</h4>
-                        <div class="content__separator-line-xs"></div>
-                        <p class="pragraph">In competitive university debating students train their argumentative
-                            skills as well as their general knowledge and rhetorical abilities. Students hold
-                            speeches on current topics and try to convince judges of their stance. The most
-                            prevalent format (British Parliamentary Format) imitates the debates taking place in the
-                            Lower House of the British Parliament. Eight competitors in teams of two argue either
-                            for or against a motion which is revealed fifteen minutes before the debate begins.
-                            There are four positions which each team is randomly assigned to. Although two teams
-                            will argue for and two teams will argue against, each team must bring a unique case in
-                            order to explain why their side is right. Speeches last seven minutes and alternate
-                            between sides, with those arguing for the motion going first. Experienced adjudicators
-                            decide whose arguments were more persuasive and give feedback for the students to
-                            improve. The best debaters compete at huge competitions such as the European
-                            Championship.
-                        </p>
-                        <p class="pragraph">
-                            Since the teams do not get more than fifteen minutes preparation time for each debate,
-                            debaters gather vast amounts of general knowledge in order to prevail in the debates.
-                            The speeches do not only train the students’ eloquence and public speaking but also
-                            hones their ability to logically analyse arguments. The judges assess speeches based
-                            primarily on the depth of explanation as well as the speaker’s delivery style. Debating
-                            is therefore seen as valuable training for ambitious students who utilise these skills
-                            in their future careers as well as their present studies. Debating teaches students to
-                            think critically and maintain an awareness of current issues. The debates usually relate
-                            to current issues faced by the European Union, governments, individuals or corporations.
-                            And as a result, debaters are exposed to a broad range of opinions on issues as diverse
-                            as war and social justice. Therefore debating is vital ‘school of democracy’ for future
-                            decision makers.
-                        </p>
-                        <p class="pragraph">
-                            University debaters worldwide build a strong international network. All over the world,
-                            debating is seen as one of the most powerful tools of education and the international
-                            debating community is strongly connected across borders. In general, debating and
-                            Tallinn EUDC foster cultural exchange and understanding between students in Europe and
-                            beyond.
-                        </p>
-                        <p class="final">
-                        <h4>Search for more:</h4>
+                    <div class="content__separator-line-xs"></div>
+                    <p class="final">
+                        <h4>More info:</h4>
                         <div>
                             <a href="http://idebate.org/">International Debate Association (IDEA)</a>
                         </div>
@@ -132,7 +96,7 @@
                                 Wikipedia
                                 Page</a>
                         </div>
-                        </p>
+                    </p>
                 </div>
             </div>
         </div>
